kubeflow/apps/pipelines/build/k8s/apps_v1_deployment_cache-deployer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cache-deployer
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
  name: cache-deployer-deployment
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache-deployer
      app.kubernetes.io/component: ml-pipeline
      app.kubernetes.io/name: kubeflow-pipelines
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cache-deployer
        app.kubernetes.io/component: ml-pipeline
        app.kubernetes.io/name: kubeflow-pipelines
    spec:
      containers:
      - env:
        - name: NAMESPACE_TO_WATCH
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: gcr.io/ml-pipeline/cache-deployer:1.5.0
        imagePullPolicy: Always
        name: main
      restartPolicy: Always
      serviceAccountName: kubeflow-pipelines-cache-deployer-sa
