kubeflow/apps/pipelines/build/k8s/v1_service_mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: kubeflow
spec:
  ports:
  - port: 3306
  selector:
    app: cloudsqlproxy
