kubeflow/apps/pipelines/build/k8s/networking.istio.io_v1alpha3_destinationrule_metadata-grpc-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: metadata-grpc-service
  namespace: kubeflow
spec:
  host: metadata-grpc-service.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
